--- a/src/main/resources/templates/cliente/importar.html
+++ b/src/main/resources/templates/cliente/importar.html
@@ -50,7 +50,7 @@
         <div class="field">
             <div class="control">
                 <button type="submit" class="button is-success">Importar Clientes</button>
-                <a th:href="@{/cliente/adicionar}" class="button is-light">Cancelar</a>
+                <a th:href="@{/dashboard}" class="button is-light">Cancelar</a>
             </div>
         </div>
     </form>
