--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
   <div class="field is-grouped">
     <div class="control">
-      <a th:href=# class="button is-primary">Login</a>
+      <a href = "#" class="button is-primary">Login</a>
     </div>
     <div class="control">
       <a th:href="@{/dashboard}" class="button is-info">Acessar Dashboard</a>
